# temp_malley

./: .env.example  .gitignore  README.md  build_dashboard.py  fetch_sensor.py  pyproject.toml
.github/workflows/: pages.yml  poll-sensor.yml
data/: sensor_15min.csv  sensor_auto.csv
